crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_approval_modal.snap
---
source: crates/cowboy-tui/src/app/mod.rs
assertion_line: 1747
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› build the project                            ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│  ╭ Approval ──────────────────────────────────────────────────────╮  │
│  │github.com:443                                                  │  │
│  │                                                                │  │
│  │ o  once — just this request                                    │──╯
│  │ s  session — every request here until this session ends        │──╮
│  │ p  project — always allow here (saved for this repo)           │it│
│  │ g  global — always allow everywhere                            │  │
│  │ d  deny                                                        │  │
│  ╰ press a key · Esc = deny ──────────────────────────────────────╯  │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ⏳  paused for you — your call · waiting 0s
╭ Enter send · Shift+Enter newline · F1 help ──────────────────────────╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
