crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_approval_modal_for_a_credential_is_not_titled_as_a_network_request.snap
---
source: crates/cowboy-tui/src/app/mod.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› run the deploy script                        ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│  ╭ Credential access ─────────────────────────────────────────────╮  │
│  │ mount   ~/.netrc                                               │  │
│  │ as      /root/.netrc                                           │  │
│  │ access  read-only                                              │──╯
│  │                                                                │──╮
│  │ declared in this project's security.yaml                       │it│
│  │                                                                │  │
│  │ o  allow — this request only (never remembered)                │  │
│  │ d  deny                                                        │  │
╰──╰ press a key · Esc = deny ──────────────────────────────────────╯──╯
   ⏳  paused for you — your call · waiting 0s
╭ Enter send · Shift+Enter newline · F1 help ──────────────────────────╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
