crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_approval_modal_names_the_command_that_asked.snap
---
source: crates/cowboy-tui/src/app/mod.rs
assertion_line: 1777
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› ╭ Network request ───────────────────────────────────────────────╮  │
│  │ destination       crates.io:443                                │  │
│  │ protocol          TLS                                          │  │
│  │ address           13.226.34.10 — external                      │  │
│  │ requested by      cargo test --workspace --all-targets         │  │
│  │ why you're asked  no rule matches; default for external is ask │  │
│  │                                                                │──╯
│  │ 3 endpoints are already saved for this project                 │──╮
│  │                                                                │it│
│  │ o  once — just this request                                    │  │
│  │ s  session — every request here until this session ends        │  │
│  │ p  project — always allow here (saved for this repo)           │  │
╰──│ g  global — always allow everywhere                            │──╯
   │ d  deny                                                        │
╭ E╰ press a key · Esc = deny ──────────────────────────────────────╯──╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
