crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_choice_modal.snap
---
source: crates/cowboy-tui/src/app/mod.rs
assertion_line: 1570
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│I need a decision.                             ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│  ╭ Question ──────────────────────────────────────────────────────╮  │
│  │Which database should we use?                                   │  │
│  │                                                                │  │
│  │  1. PostgreSQL                                                 │──╯
│  │▸ 2. SQLite                                                     │──╮
│  │  3. MySQL                                                      │it│
│  │  ✎ Type your own answer…                                       │  │
│  │↑↓ select · 1-9 pick · Enter choose · or just start typing      │  │
│  ╰────────────────────────────────────────────────────────────────╯  │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ⏳  your turn — pick above · waiting 0s
╭ Enter send · Shift+Enter newline · F1 help ──────────────────────────╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
