crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_completion_popup.snap
---
source: crates/cowboy-tui/src/app/mod.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│                                               ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││no background activit│
│                                               ││                     │
╭ 2 matches · Tab ───────────────────────────────╮                     │
│/github:review-pr  <pr-number-or-url> [filename]│                     │
│/git:setup-worktree  set up a new worktree      │─────────────────────╯
╰────────────────────────────────────────────────╯
╭ Enter send · ↑↓ history · drag+y copy · F1 help · Ctrl-C twice to end╮
│/gi                                                                   │
╰──────────────────────────────────────────────────────────────────────╯
