crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_context_report.snap
---
source: crates/cowboy-tui/src/app/mod.rs
assertion_line: 2046
expression: render(&app)
---
╭ ~/dev/cowboy  ⎇ main ─────────────────────────╮╭ network ────────────╮
│context  84,500/160,000 tokens (52%)           ││no network activity  │
│  tool results             41000  █████████    ││yet                  │
│  model reasoning          22000  █████        ││                     │
│  assistant messages       12500  ██           ││                     │
│  tool schemas              3650               ││                     │
│  your messages             2400               ││                     │
│  system + summaries        1300               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││no background activit│
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ready — ready                                       ctx ▰▰▰▰▱▱▱▱ 52%
╭ Enter send · ↑↓ history · drag+y copy · F1 help · Ctrl-C twice to end╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
