crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_idle_ready_for_next_message.snap
---
source: crates/cowboy-tui/src/app/mod.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› create a hello world                         ││no network activity  │
│                                               ││yet                  │
│✓ Done — created main.rs.                      ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││no background activit│
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ready — ready
╭ Enter send · ↑↓ history · drag+y copy · F1 help · Ctrl-C twice to end╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
