crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_markdown_and_diff_rendering.snap
---
source: crates/cowboy-tui/src/app/mod.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────║╭ network ────────────╮
│  ─────┼────────┼──────                        ║│no network activity  │
│  nil  │ leak   │ empty                        ║│yet                  │
│                                               ║│                     │
│  fn ok() -> bool { true }                     ║│                     │
│                                               █│                     │
│  --- a/foo.rs                                 █│                     │
│  +++ b/foo.rs                                 █╰─────────────────────╯
│  @@ -1,3 +1,3 @@                              █╭ background ─────────╮
│   fn ok() {                                   █│no background activit│
│  -    old();                                  █│                     │
│  +    new();                                  █│                     │
│   }                                           █│                     │
╰───────────────────────────────────────────────█╰─────────────────────╯
   ready — ready
╭ Enter send · ↑↓ history · drag+y copy · F1 help · Ctrl-C twice to end╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
